--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "0.0.1",
   "author": "Secure Secrets",
   "license": "MIT",
+  "engines": {
+    "node": "18.16.0"
+  },
   "scripts": {
     "lint": "eslint \"**/*.{ts,js}\"",
     "test": "vitest --run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest watch"
   },
-  "devDependencies": {
-    "typescript": "^4.9.4"
-  },
   "type": "module",
   "dependencies": {
+    "bignumber.js": "^9.1.0",
+    "eslint": "^8.51.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
     "rxjs": "^7.8.1",
     "secretjs": "^1.9.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.11",
-    "vitest": "^0.34.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "8.38.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "stylelint": "^14.7.1",
-    "bignumber.js": "^9.1.0"
+    "vitest": "^0.34.6"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4"
   }
 }
