--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.0.1",
   "author": "Secure Secrets",
   "license": "MIT",
-  "engines": {
-    "node": "18.16.0"
-  },
   "scripts": {
+    "commitizen": "cz",
     "lint": "eslint \"**/*.{ts,js}\"",
+    "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix",
     "test": "vitest --run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest watch"
   },
   "type": "module",
   "dependencies": {
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "bignumber.js": "^9.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -28,5 +30,10 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
