--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix",
     "test": "vitest --run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "typecheck": "tsc --noEmit"
   },
   "type": "module",
   "dependencies": {
+    "@arkweid/lefthook": "^0.7.7",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "bignumber.js": "^9.1.0",
