--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "exports": {
     ".": {
       "import": "./dist/shadejs.js",
-      "require": "./dist/shadejs.umd.cjs"
+      "require": "./dist/shadejs.cjs"
     }
   },
   "files": [
@@ -27,7 +27,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@arkweid/lefthook": "^0.7.7",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "bignumber.js": "^9.1.0",
@@ -36,6 +35,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
+    "lefthook": "^1.5.2",
     "rxjs": "^7.8.1",
     "secretjs": "^1.9.3",
     "typescript": "^5.2.2",
