--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     }
   },
   "files": [
-    "dist"
+    [
+      "dist"
+    ]
   ],
   "scripts": {
     "build": "tsc && vite build",
@@ -37,15 +39,17 @@
     "eslint-plugin-import": "^2.28.1",
     "lefthook": "^1.5.2",
     "rxjs": "^7.8.1",
-    "secretjs": "^1.9.3",
+    "secretjs": "^1.11.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "whatwg-fetch": "^3.6.19"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "vite-plugin-dts": "^3.6.0"
+    "vite-plugin-dts": "^3.6.0",
+    "vite-plugin-node-polyfills": "^0.15.0"
   },
   "config": {
     "commitizen": {
