--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
+    "bignumber.js": "^9.1.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
