--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadejs",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "author": "Secure Secrets",
   "license": "MIT",
   "type": "module",
@@ -13,11 +13,7 @@
       "require": "./dist/shadejs.cjs"
     }
   },
-  "files": [
-    [
-      "dist"
-    ]
-  ],
+  "files": [ "dist" ],
   "scripts": {
     "build": "tsc && vite build",
     "commitizen": "cz",
@@ -32,28 +28,28 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "bignumber.js": "^9.1.2",
+    "rxjs": "^7.8.1",
+    "secretjs": "^1.11.1",
+    "vite": "^4.4.11",
+    "whatwg-fetch": "^3.6.19"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
-    "bignumber.js": "^9.1.2",
-    "cz-conventional-changelog": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-plugin-node-polyfills": "^0.15.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "lefthook": "^1.5.2",
-    "rxjs": "^7.8.1",
-    "secretjs": "^1.11.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11",
     "vitepress": "^1.0.0-rc.24",
     "vitest": "^0.34.6",
-    "whatwg-fetch": "^3.6.19"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "vite-plugin-dts": "^3.6.0",
-    "vite-plugin-node-polyfills": "^0.15.0"
+    "typescript": "^5.2.2"
   },
   "config": {
     "commitizen": {
