--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadejs",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": "Secure Secrets",
   "license": "MIT",
   "type": "module",
@@ -13,7 +13,9 @@
       "require": "./dist/shadejs.cjs"
     }
   },
-  "files": [ "dist" ],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc && vite build",
     "commitizen": "cz",
@@ -35,21 +37,22 @@
     "whatwg-fetch": "^3.6.19"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
+    "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "vite-plugin-dts": "^3.6.0",
-    "vite-plugin-node-polyfills": "^0.15.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "lefthook": "^1.5.2",
+    "typescript": "^5.2.2",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-plugin-node-polyfills": "^0.15.0",
     "vitepress": "^1.0.0-rc.24",
-    "vitest": "^0.34.6",
-    "typescript": "^5.2.2"
+    "vitest": "^0.34.6"
   },
   "config": {
     "commitizen": {
