test: name of build check

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
         cache: yarn
     - name: Install Dependencies
       run: yarn install --frozen-lockfile
-    - name: Eslint-Check
+    - name: Build-check
       run: yarn build
