--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "scripts": {
     "build": "tsc && vite build",
+    "release": "tsc && vite build && changesets publish",
     "commitizen": "cz",
     "lint": "eslint \"**/*.{ts,js}\"",
     "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix",
