--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,4 +26,4 @@ jobs:
         publish: yarn release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
