--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shadeprotocol/shadejs",
   "description": "The Typescript SDK for Shade Protocol",
-  "version": "1.0.9",
+  "version": "1.7.0",
   "author": "Secure Secrets",
   "bugs": {
     "url": "https://github.com/securesecrets/shadejs/issues"
@@ -41,27 +41,27 @@
   },
   "dependencies": {
     "bignumber.js": "^9.1.2",
-    "rxjs": "^7.8.1",
-    "secretjs": "1.15.0",
-    "vite": "^4.5.0",
+    "rxjs": "^7.8.2",
+    "secretjs": "1.15.1",
+    "vite": "^6.2.3",
     "whatwg-fetch": "^3.6.19"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.2",
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@changesets/cli": "^2.28.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.51.0",
+    "eslint": "^9.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^4.2.5",
     "eslint-plugin-import": "^2.28.1",
-    "lefthook": "^1.5.2",
-    "typescript": "^5.2.2",
-    "vite-plugin-dts": "^3.6.0",
-    "vitepress": "^1.0.0-rc.24",
-    "vitest": "^0.34.6"
+    "lefthook": "^1.11.5",
+    "typescript": "^5.8.2",
+    "vite-plugin-dts": "^4.5.3",
+    "vitepress": "^1.6.3",
+    "vitest": "^3.0.9"
   },
   "config": {
     "commitizen": {
