--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shadeprotocol/shadejs",
   "description": "The Typescript SDK for Shade Protocol",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "author": "Secure Secrets",
   "bugs": {
     "url": "https://github.com/securesecrets/shadejs/issues"
@@ -29,8 +29,8 @@
     "build": "tsc && vite build",
     "release": "tsc && vite build && changeset publish",
     "commitizen": "cz",
-    "lint": "eslint \"**/*.{ts,js}\"",
-    "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
     "test": "vitest --run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest watch",
@@ -56,7 +56,7 @@
     "eslint": "^9.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^4.2.5",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.28.1",
     "lefthook": "^1.11.5",
     "typescript": "^5.8.2",
     "vite-plugin-dts": "^4.5.3",
