--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shadeprotocol/shadejs",
   "description": "The Typescript SDK for Shade Protocol",
-  "version": "1.0.9",
+  "version": "1.8.0",
   "author": "Secure Secrets",
   "bugs": {
     "url": "https://github.com/securesecrets/shadejs/issues"
@@ -40,7 +40,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "bignumber.js": "^9.1.2",
+    "bignumber.js": "9.3.0",
     "rxjs": "^7.8.1",
     "secretjs": "1.15.0",
     "vite": "^4.5.0",
